welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
}

def marquer(){baisseBrosse();leveBrosse()}

def faireV(c:Color){
  setCouleurBrosse(c)
  avance(2)
  marquer()
  avance()
  gauche()
  avance()
  marquer()
  recule()
  droite()
  avance()
  marquer()
  avance(2)
  gauche()
  
}

def faireMotif() {
  faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
  }



override def run() {
  for (i<-1 to 3){
    for(i<-1 to 3) {
  	 faireMotif()
   		avance(7)
    }
   gauche()
   avance(7)
   droite()
  }
   
 }